# sw-fw-battle

./: CMakeLists.txt  KNOWN_ISSUES.md
.github/workflows/: release.yml
core/: arena.hpp  unit.hpp
feature/: abilities.h  properties.h  units.hpp
feature/ability/: close_attack.hpp  common.hpp  mortal.hpp  move.hpp  range_attack.hpp
feature/property/: agility.h  destination.h  health.h  identity.h  position.h  range.h  strength.h
io/: command_parser.cpp  command_parser.hpp  event_logger.hpp
io/commands/: create_map.hpp  march.hpp  spawn_hunter.hpp  spawn_swordsman.hpp
io/event/: event.h  map_created.hpp  march_ended.hpp  march_started.hpp  unit_attacked.hpp  unit_died.hpp  unit_moved.hpp  unit_spawned.hpp
src/: main.cpp  simulation.cpp  simulation.h
